sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:6: error: not found: value v
    v=getValue(i)
    ^AlgShellSort:7: error: not found: value j
    j=i
    ^AlgShellSort:8: error: not found: value j
    while ((j>0) && (getValue(j-gap)>v) ) {
            ^AlgShellSort:8: error: not found: value j
    while ((j>0) && (getValue(j-gap)>v) ) {
                              ^AlgShellSort:8: error: not found: value v
    while ((j>0) && (getValue(j-gap)>v) ) {
                                     ^AlgShellSort:9: error: not found: value j
      setValue(j, getValue(j-gap))
               ^AlgShellSort:9: error: not found: value j
      setValue(j, getValue(j-gap))
                           ^AlgShellSort:10: error: not found: value j
      j=j-gap
      ^AlgShellSort:12: error: not found: value j
    setValue(j,v)
             ^AlgShellSort:12: error: not found: value v
    setValue(j,v)
               ^