sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var gap:Int = getValueCount() /2
  while (gap>0) {
    for (i <- 1 to getValueCount()-1) {
    v=getValue(i)
    j=i
    while ((j>0) && (getValue(j-gap)>v) ) {
      setValue(j, getValue(j-gap))
      j=j-gap
    }
    setValue(j,v)
    }
  	gap=gap/2
  }
}






def insertionSort() {
  var v:Int=0
  var j:Int=0
  for (i <- 1 to getValueCount()-1) {
    v=getValue(i)
    j=i
    while ((j>0) && (getValue(j-1)>v) ) {
      setValue(j, getValue(j-1))
      j=j-1
    }
    setValue(j,v)
  }
}